--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,9 @@
 @import 'normalize';
 @import 'variables';
+@import 'mixins';
 @import 'slider';
+@import 'socials';
+
 
 * {
   box-sizing: border-box;
@@ -39,12 +42,11 @@ body {
     color: $primary-color;
     font-family: $title-ff;
     font-size: 6rem;
-    margin: 0;
+    margin: 0 0 30px 0;
     line-height: 1.2;
   }
   &__icon {
     position: relative;
-    padding: 30px 0;
     & svg {
       fill: $primary-color;
     }
@@ -53,7 +55,7 @@ body {
       content: '';
       max-width: 18%;
       width: 210px;
-      border-top: $border-width solid $primary-color;
+      border-top: $border;
       display: block;
       position: absolute;
       top: calc(50% - #{$border-width} / 2);
@@ -64,5 +66,62 @@ body {
     &::after {
       left: calc(50% + 24px);
     }
+  }
+}
+
+.profile {
+  display: flex;
+  &__part {
+    width: 50%;
+    padding: 85px;   
+    text-align: center; 
+    & + & {
+      border-left: $border;
+    }
+  }
+  &__imgwrap {
+    border: $border;
+    font-size: 0;
+    padding: 15px;
+    position: relative;
+    z-index: 2;
+    &:before,
+    &:after {
+      content: '';
+      display: block;
+      width: calc(100% + #{$border-width} * 4);
+      height: 60%;
+      background-color: #fff;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    &::after {
+      width: 60%;
+      height: calc(100% + #{$border-width} * 4);
+    }
+  }
+  &__img {
+    width: 100%;
+    border: $border;
+    position: relative;
+    z-index: 1;
+  }
+  &__name {
+    font: 900 3.6rem/1.2 $title-ff;
+    color: $secondary-color;
+    margin: 0;
+    &:after {
+      content: '';
+      width: 100px;
+      border-top: $border;
+      display: block;
+      margin: 25px auto;
+    }
+  }
+  &__position {
+    font-size: 2.4rem;
+    color: $secondary-color;
   }
 }
