--- a/scss/style.scss
+++ b/scss/style.scss
@@ -138,7 +138,7 @@ body {
       content: '';
       display: block;
       position: absolute;
-      width: 5px;
+      max-width: 3%;
       top: 0;
       bottom: 0;
       background-color: #fff;
